--- a/personal/templates/personal/home.html
+++ b/personal/templates/personal/home.html
@@ -1,12 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<div style = "border: 2px solid #000;">
-    <h1>This is the body</h1>
-    <p>Body goes here</p>
-    {% for account in accounts %}
-        <p>{{account}}</p>
-    {% endfor %}
+<h3> Registered user</h3>
+{% for account in accounts %}
+    <p>{{account}}</p>
+{% endfor %}
 
-</div>
 {% endblock content %}
